--- a/application/index/view/student.html
+++ b/application/index/view/student.html
@@ -8,47 +8,53 @@
     <title>{block name="title"}微课堂-梦云智出品{/block}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Bootstrap Core CSS -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="/static/css/landing-page.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!--调用bootstrap的CSS样式 -->
     {block name="class"}
     {/block}
 </head>
 
-<body class="container">
+<body class="container"style="background-image: url(/static/img/intro-bg.jpg)">
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
+        <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+        <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">微课堂</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand">微课堂</a>
+                <a class="navbar-brand topnav" href="#">微课堂</a>
             </div>
+
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li {eq name="$isaction" value="page"}class="active"{/eq}><a href="/index/student/page">学生主页</a></li>
+                <ul class="nav navbar-nav navbar-right">
+                  <li {eq name="$isaction" value="page"}class="active"{/eq}><a href="/index/student/page">学生主页</a></li>
                     <li {eq name="$isaction" value="course"}class="active"{/eq}><a href="/index/student/course">课程查询</a></li>
                     <li {eq name="$isaction" value="score"}class="active"{/eq}><a href="/index/student/score">成绩查询</a></li>
                     <li {eq name="$isaction" value="info"}class="active"{/eq}><a href="/index/student/info">个人信息</a></li>
+                     <li><a href="/index/login/SlogOut">注销</a></li>
                     <!--是这个标签是当前标签 -->
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">您好，亲爱的同学 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/index/login/SlogOut">注销</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
     </nav>
     <br><br>
             <?php use app\index\model\Term; ?>
