--- a/application/index/view/teacher/course.html
+++ b/application/index/view/teacher/course.html
@@ -1,14 +1,19 @@
 {extend name="teacher"/}
 {block name="body"}
+<style type="text/css">
+  .white{
+    color: white;
+  }
+</style>
             <hr />
                 <div class="row">
                   <div class="col-md-8">
                     <form class="form-inline">
                       <div class="form-group">
                         <label class="sr-only" for="name">姓名</label>
-                        <input type="text" name="name" class="form-control" placeholder="名称..." value="{:input('ge.name')}">
+                        <input type="text" name="name"  style="background-color:rgb(255,255,255,0.1); color: white"  class="form-control" placeholder="名称..." value="{:input('ge.name')}">
                       </div>
-                      <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;查询</button>
+                      <button type="submit"  style="background-color:rgb(255,255,255,0.1); color: white"  class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;查询</button>
                     </form>
                   </div>
                   <div class="col-md-4 text-right">
@@ -19,33 +24,32 @@
                 <hr />
               
               <table class="table table-bordered">
-                <tr class="info">
-                  <th>序号</th>
-                  <th>课程名称</th>
-                  <th>课程代码</th>
-                  <th>任课老师</th>
-                  <th>学期</th>
-                  <th>课程类型</th>
-                  <th>上课时间</th>
-                  <th>操作</th>
+                <tr>
+                  <th class="white">序号</th>
+                  <th class="white">课程名称</th>
+                  <th class="white">课程代码</th>
+                  <th class="white">任课老师</th>
+                  <th class="white">学期</th>
+                  <th class="white">课程类型</th>
+                  <th class="white">上课时间</th>
+                  <th class="white">操作</th>
                 </tr>
                 {volist name="courses" id="course" key="key"}
                 <tr>
-                  <td>{$key}</td>
-                  <td>{$course->getData('name')}</td>
-                  <td>{$course->getData('num')}</td>
-                  <td>{$course->getTeacher()->getData('name')}</td>
-                  <td>{$course->getTerm()->getData('name')}</td>
-                  <td>{eq name='course->getData("type")' value='1' }必修{else /}选修{/eq}</td>
-                  <td><a href="{:url('coursesee?id=' . $course->getData('id'))}" type="button" class="btn btn-default">点击查看</a></td>
-                  <td>
-                    <a class=" btn btn-danger btn-sm" href="{:url('coursedelete?id=' . $course->getData('id'))}"><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
-                    <a class="btn btn-sm btn-primary" href="{:url('courseedit?id=' . $course->getData('id'))}"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
+                  <td class="white">{$key}</td>
+                  <td class="white">{$course->getData('name')}</td>
+                  <td class="white">{$course->getData('num')}</td>
+                  <td class="white">{$course->getTeacher()->getData('name')}</td>
+                  <td class="white">{$course->getTerm()->getData('name')}</td>
+                  <td class="white">{eq name='course->getData("type")' value='1' }必修{else /}选修{/eq}</td>
+                  <td class="white"><a style="background-color:rgb(255,255,255,0.1); color: white" href="{:url('coursesee?id=' . $course->getData('id'))}" type="button" class="btn btn-default">点击查看</a></td>
+                  <td class="white">
+                    <a class=" btn btn-sm" style="background-color:rgb(236,52,52,0.7); color: white" href="{:url('coursedelete?id=' . $course->getData('id'))}"><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
+                    <a class="btn btn-sm btn-primary" style="background-color:rgb(38,74,174,0.7); color: white"  href="{:url('courseedit?id=' . $course->getData('id'))}"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
                   </td>
                 </tr>
                 {/volist}
             </table>
             {$courses|raw}
               <br><br>
-             <hr /> 
 {/block}
