--- a/application/index/view/student/entercourse.html
+++ b/application/index/view/student/entercourse.html
@@ -66,7 +66,10 @@
                   <div class="col-md-2">
                     <h2>讲台</h2>
                   </div>
-                  <div class="col-md-5"></div>
+                  <div class="col-md-3"> </div>
+                  <div class="col-md-2">
+                    <a href="{:url('/index/student/page')}" class="btn btn-info" >返回主页面</a>
+                  </div>
                 </div>
                 <table class="table table-striped">
                   <tr class="info">
