--- a/application/index/view/teacher/gradeadd.html
+++ b/application/index/view/teacher/gradeadd.html
@@ -11,11 +11,11 @@
  <div class="col-md-5">
   <label for="" class="option" style="color: white">请选择平时成绩所占权重</label>
   <select name="usual" id="usual" lay-search style="height: 4%;"  onchange="reload();">
-   <option  class="white" value="0.3">30%</option>
-   <option  class="white" value="0.1">10%</option>
-   <option  class="white" value="0.2">20%</option>
-   <option  class="white" value="0.4">40%</option>
-   <option  class="white"value="0.5">50%</option>
+   <option value="0.3">30%</option>
+   <option value="0.1">10%</option>
+   <option  value="0.2">20%</option>
+   <option value="0.4">40%</option>
+   <option  value="0.5">50%</option>
 
  </select>
 </div>
@@ -157,8 +157,8 @@
     totalScore = total[index];
     if (usualScore && examScore && totalScore) {
       let response = usualWeight * usualScore.innerText + (1 - usualWeight) * examScore.innerText;
-      totalScore.innerText = response;
-      totalSave(id, response);
+      totalScore.innerText = (Math.round(response*10)/10);
+     totalSave(id,  (Math.round(response*10)/10));
     }
   }
 
@@ -168,7 +168,7 @@
       type: "get",
         //成功后调用success后面的语句
         success: function(response) {
-          callback(response);
+          callback(GetRound(response,1));
         },
         //失败后调用error后面的语句
         error: function(xhr) {
