--- a/application/index/view/teacher/onlinehome.html
+++ b/application/index/view/teacher/onlinehome.html
@@ -15,7 +15,7 @@
                 <a href="onlinesignin?id={$courseinfo['id']}" class="btn btn-primary" style="background-color: rgb(39,84,185,0.7);">&nbsp;随机提问</a>
 
             </div>
-            <div class="col-md-4"><h2 class="white">签到人数：{$nownumber}/100</h2>  </div>
+            <div class="col-md-4"><h2 class="white">签到人数：{$nownumber}/{$number}</h2>  </div>
         </div>
         <div class="row">
           <div class="col-md-5"></div>
