--- a/application/index/view/teacher/onlinesignin.html
+++ b/application/index/view/teacher/onlinesignin.html
@@ -24,7 +24,7 @@
   </p>
   <p>
     <a class="btn btn-primary btn-lg" href="/index/teacher/onlinehome?id={$courseinfo->id}" role="button">返回</a>
-    <a class="btn btn-primary btn-lg" href="/index/teacher/onlinesignin/id/{$courseinfo->id}" role="button">刷新</a>
+    <a class="btn btn-primary btn-lg" href="/index/teacher/onlinesignin?id={$courseinfo->id}" role="button">刷新</a>
   </p>
   
   </div>
