--- a/application/index/view/admin.html
+++ b/application/index/view/admin.html
@@ -40,7 +40,7 @@
                     <li {eq name="$isaction" value="area"}class="active"{/eq}><a href="/index/admin/area">教室区域管理</a></li>
                     <!-- 这个标签是当前标签 -->
                     <li {eq name="$isaction" value="classroom"}class="active"{/eq}><a href="/index/admin/classroom">教室管理</a></li>
-                    <li {eq name="$isaction" value="classroom"}class="active"{/eq}><a href="/index/admin/remind">上课提醒</a></li>
+                    <li {eq name="$isaction" value="remind"}class="active"{/eq}><a href="/index/admin/remind">上课提醒</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
