--- a/application/index/view/login/index.html
+++ b/application/index/view/login/index.html
@@ -68,7 +68,7 @@
 
     
     <div class="page-inner">
-    <nav class="gtco-nav" role="navigation">
+<!--     <nav class="gtco-nav" role="navigation">
         <div class="gtco-container">
             
             <div class="row">
@@ -95,7 +95,7 @@
             </div>
             
         </div>
-    </nav>
+    </nav> -->
     
     <header id="gtco-header" class="gtco-cover" role="banner" style="background-image: url(/static/img/img_4.jpg)">
         <div class="overlay"></div>
