--- a/application/index/view/student/score.html
+++ b/application/index/view/student/score.html
@@ -39,16 +39,16 @@
                 </tr>
                 {volist name="scores" id="score" key="key"}
                 <tr>
-                    <td>{$score->course->name}</td>
-                    <td>{$score->course->teacher->name}</td>
-                    <td>{$score->getData('score1')}</td>
-                    <td>{$score->getData('score2')}</td>
-                    <td>{$score->getData('scoresum')}</td>
+                    <td class="white">{$score->course->name}</td>
+                    <td class="white">{$score->course->teacher->name}</td>
+                    <td class="white">{$score->getData('usual_score')}</td>
+                    <td class="white">{$score->getData('exam_score')}</td>
+                    <td class="white">{$score->getData('total_score')}</td>
                 </tr>
                 {/volist}
             </table>
             {$scores|raw}
-            
+            <h4 class="white">温馨提示：本成绩来自后台数据库，仅供参考，实际情况请查询教务系统</h4>
         </div>
     </div>
     
