--- a/application/index/view/admin/teacheredit.html
+++ b/application/index/view/admin/teacheredit.html
@@ -47,7 +47,7 @@
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">密码：</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" value="{$Teacher->getData('num')}" name="password" />
+                    <input type="text" class="form-control" id="name" value="{$Teacher->getData('password')}" name="password" />
                 </div>
             </div>
             <div class="form-group">
