--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -1,42 +1,75 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-<!-- 管理员界面——教师管理编辑 -->
-<!-- limeina1 -->
-<!-- 2019.08.09 20：40 -->
-
+<!--刘宇轩-->
+<!--2019.07.19 14:55-->
+<style type="text/css">
+   .white{
+    color: white;
+   } 
+</style>
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}注册{/block}</title>
+    <title class="white">{block name="title"}微课堂-梦云智出品{/block}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Bootstrap Core CSS -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="/static/css/landing-page.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!--调用bootstrap的CSS样式 -->
+    {block name="class"}
+    {/block}
 </head>
 
+<body class="container" style="background-image: url(/static/img/intro-bg.jpg)">
+    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+        <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+        <div class="container topnav">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">微课堂</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand topnav" href="#">微课堂</a>
+            </div>
+    </nav>
 <body class="container">
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-top: 5%">
         <div class="page-header">
-            <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
+            <h1 class="text-center"  style="color: white">微课堂 <small style="color: white">梦云智出品</small></h1>
         </div>
         <form class="form-horizontal" action="{:url('save')}" method="post">
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">姓名:</label>
+                <label for="name" class="col-sm-2 control-label" style="color: white">姓名:</label>
                 <div class="col-sm-10">
                     <input type="hidden" class="form-control" name="id" value="{$id}" />
                     <input type="text" class="form-control" name="name" />
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">学号:</label>
+                <label class="col-sm-2 control-label"  style="color: white">学号:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="num" />
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">性别:</label>
+                <label class="col-sm-2 control-label" style="color: white">性别:</label>
                 <div class="col-sm-10">
                     <select name="sex" class="form-control">
                     	<option value="0">男</option>
@@ -45,13 +78,13 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">密码:</label>
+                <label class="col-sm-2 control-label" style="color: white">密码:</label>
                 <div class="col-sm-10">
                     <input type="password" class="form-control" name="password" />
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">学院:</label>
+                <label class="col-sm-2 control-label" style="color: white">学院:</label>
                 <div class="col-sm-10">
                     <select name="collge_id" class="form-control" onchange="selectKlasses(value)" id="college">
                         <option value="-1">--请选择学院--</option>
@@ -63,7 +96,7 @@
             </div>
 
             <div class="form-group">
-                <label class="col-sm-2 control-label">班级:</label>
+                <label class="col-sm-2 control-label" style="color: white">班级:</label>
                 <div class="col-sm-10">
                     <select name="klass_id" class="form-control" id="klasses">
                     </select>
