--- a/application/index/view/admin/classroom.html
+++ b/application/index/view/admin/classroom.html
@@ -38,6 +38,7 @@
                     <td>
                         <a class="btn btn-primary" href="classroomedit?id={$Classroom->getData('id')}">&nbsp;编辑</a>
                         <a class="btn btn-danger" href="classroomdelete?id={$Classroom->getData('id')}">&nbsp;删除</a>
+                        <a class="btn btn-success" href="classroomcode?id={$Classroom->getData('id')}">&nbsp;打印二维码</a>
                     </td>
                 </tr>
                 {/volist}
