--- a/application/index/view/admin.html
+++ b/application/index/view/admin.html
@@ -41,6 +41,7 @@
                     <!-- 这个标签是当前标签 -->
                     <li {eq name="$isaction" value="classroom"}class="active"{/eq}><a href="/index/admin/classroom">教室管理</a></li>
                     <li {eq name="$isaction" value="remind"}class="active"{/eq}><a href="/index/admin/remind">上课提醒</a></li>
+                    <li {eq name="$isaction" value="classroom_timeDelete"}class="active"{/eq}><a href="/index/admin/classroom_timeDelete">每天初始</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
