--- a/application/index/view/admin/classroomcode.html
+++ b/application/index/view/admin/classroomcode.html
@@ -32,8 +32,8 @@
                 <?php $x='0'.$j; else:$x=$j ?>
               <?php endif; ?>
                 <div id="qrcode{$y}{$x}"></div>
+              <a href="<?php echo $url.$y.$x ?>">这是这个座位的连接</a>
               <?php echo $url.$y.$x ?>
-
             </td>
 
             <script type="text/javascript">
