--- a/application/index/view/teacher/online_see.html
+++ b/application/index/view/teacher/online_see.html
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-
+    
     <br>
             <?php use app\index\model\Term; ?>
             <?php $time = Term::timeAll(); ?>
@@ -34,7 +34,7 @@
               {eq name='$time->term' value='0'}   
               <div  style="background-color:rgb(143,70,70,0.7); color: white" class="alert {eq name='$time->term' value='1'}alert-success{else /}alert-warning{/eq}" role="alert">激活学期{eq name="$time->term" value="1"}已开始{else /}已结束{/eq}</div>
               {else}
-              <div class="alert alert-success"  style="background-color:rgb(85,131,97,0.7); color: white" role="alert">{$time->date}&nbsp&nbsp第{$time->week}教学周&nbsp&nbsp{$time->weekday}&nbsp&nbsp第{$time->largeClass}大节</div>
+              <div class="alert alert-success"  style="background-color:rgb(85,131,97,0.7); color: white" role="alert">{$time->date}&nbsp&nbsp第{$time->week}教学周&nbsp&nbsp{$time->weekday}&nbsp&nbsp第{$time->largeClass}大节{eq name='$Classroom_time->status' value='1'}，已绑定课程：{$courseinfo->course->name}{/eq}</div>
               <h3></h3>
               {/eq}
 
@@ -50,7 +50,7 @@
           <div class="col-md-8">
             
                 <h3></h3>
-                <a href="setCourse?id={$Classroom_time['id']}" class="btn btn-success" style="background-color: rgb(74,155,47,0.7);">&nbsp;签到</a>
+<!--                 <a href="setCourse?id={$Classroom_time['id']}" class="btn btn-success" style="background-color: rgb(74,155,47,0.7);">&nbsp;签到</a> -->
                 <a href="onlinesignin?id={$Classroom_time['id']}" class="btn btn-primary" style="background-color: rgb(39,84,185,0.7);">&nbsp;随机提问</a>
 
             </div>
@@ -92,18 +92,15 @@
         
     </div>
     <script type="text/javascript">
+      //验证是否有课
       function judge(){
-        var url = "/index/login/judgeFocus";
-        ajaxGet(url, function(response)
+        var ifcourse = <?php echo($ifcourse); ?>;
+        var status = <?php echo($Classroom_time->status); ?>;
+        if(ifcourse == 1 && status == 0)
         {
-          console.log(response);
-          if(response != -1)
-          {
-           popup();
-          }
-        });
+         popup();
+        }
       }
-
 
       function ajaxGet(url, callback)
       {
@@ -123,10 +120,10 @@
     /*弹窗*/
     function popup(){
     var x;
-    var r=confirm("是否绑定本节课程信息!");
+    var r=confirm("系统检测到您此时有课，是否绑定本节课程信息？");
     if (r==true)
     {
-      var url = "/index/login/binding";
+      var url = "/index/Teacher/binding?courseinfo={$courseinfo->id}&Classroom_time={$Classroom_time->id}";
         ajaxGet(url, function(response)
         {
           console.log(response);
