--- a/application/index/view/teacher.html
+++ b/application/index/view/teacher.html
@@ -46,7 +46,7 @@
                 <ul class="nav navbar-nav ">
                     <li {eq name="$isaction" value="page"}class="active"{/eq}><a href="/index/teacher/page">首页 <span class="sr-only">(current)</span></a></li>
                     <!--是这个标签是当前标签 -->
-                    <li {eq name="$isaction" value="online"}class="active"{/eq}><a href="/index/teacher/online">上课模式</a></li>
+                    <!-- <li {eq name="$isaction" value="online"}class="active"{/eq}><a href="/index/teacher/online">上课模式</a></li> -->
                     <li {eq name="$isaction" value="course"}class="active"{/eq}><a href="/index/teacher/course">课程管理</a></li>
                     <li {eq name="$isaction" value="grade"}class="active"{/eq}><a href="/index/teacher/grade">成绩录入</a></li>
                 </ul>
